--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "colors": "^1.4.0",
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
